fixed issue with Avatar first letter (removed the static entry) and made header above everything using z-index: 1000 in CSS

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 .app__headerImage{
